--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,8 @@
 	interactive = auto
 	status = auto
 [alias]
-   lol = log --graph --decorate --pretty=oneline --abbrev-commit
+   l = log --pretty=format:'%h %ci %s (%an)'
+   lol = log --graph --decorate --pretty=oneline --abbrev-commit 
    lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
    standup = log --pretty=format:'%Cred%h%Creset -%Creset %s %Cgreen(%cD) %C(bold blue)<%an>%Creset' --since yesterday --author Karl-L
 [core]
